[tool.poetry]
name = "rnsh"
version = "0.1.6"
description = "Shell over Reticulum"
authors = ["acehoss <acehoss@acehoss.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
rns = ">=0.9.0"

[tool.poetry.scripts]
rnsh = 'rnsh.rnsh:rnsh_cli'

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
setuptools = "^67.2.0"
pytest-asyncio = "^0.20.3"
safety = "^2.3.5"
tomli = "^2.0.1"
rns = {version = "^0.9.0", allow-prereleases = true}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "skip_ci: marks tests that should not be run in CI builds (deselect with '-m \"not skip_ci\"')"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
